# fontviewer

./: .gitignore  README.md  _OLD_CMakeLists.txt  install.sh  meson.build  uninstall.sh
data/: fontviewer.desktop
debian/: changelog  control  fontviewer.install  postinst
po/: POTFILES  de.po  fontviewer.pot  meson.build
src/: constants.hpp  font.hpp  google-fonts-window.cpp  google-fonts-window.hpp  main.cpp  mainwindow.hpp  pangram.cpp  pangram.hpp  sushi-font-widget.c  sushi-font-widget.h  utils.cpp  utils.hpp
src/googlefonts/: family.cpp  family.hpp  google-fonts-window.cpp  google-fonts-window.hpp
